k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: warmdiet
  labels:
    name: warmdiet
    app: warmdiet
